# cognitum-learn

./: .ascii-to-svg-manifest.json  .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cog-store.json
.claude/skills/cognitum-learn/: SKILL.md
.claude/skills/learn-rv/: SKILL.md
.github/workflows/: release.yml
crates/learn-acquire/: Cargo.toml
crates/learn-acquire/src/: lib.rs  vtt.rs
crates/learn-asr/: Cargo.toml
crates/learn-asr/src/: engine.rs
crates/learn-chunk/proptest-regressions/: lib.txt
crates/learn-chunk/src/: lib.rs
crates/learn-cli/: Cargo.toml
crates/learn-cli/src/: cloud.rs  commands.rs  config.rs  doctor.rs  main.rs  map.rs  push.rs  quiz.rs  seed_query.rs  setup.rs  ui.rs
crates/learn-coherence/: Cargo.toml
crates/learn-coherence/src/: lib.rs
crates/learn-core/: Cargo.toml
crates/learn-core/src/: lib.rs
crates/learn-embed/: Cargo.toml
crates/learn-embed/src/: download.rs  lib.rs
crates/learn-eval/src/: lib.rs
crates/learn-frames/: Cargo.toml
crates/learn-frames/src/: decide.rs  lib.rs
crates/learn-graph/: Cargo.toml
crates/learn-index/: Cargo.toml
crates/learn-index/src/: lib.rs
crates/learn-reasoning/: Cargo.toml
crates/learn-retrieve/: Cargo.toml
crates/learn-retrieve/src/: bm25.rs  mmr.rs  tests.rs
crates/learn-serve/: Cargo.toml
crates/learn-serve/src/: http.rs  lib.rs  protocol.rs  tools.rs
crates/learn-serve/tests/: cdn_pinning.rs
crates/learn-serve/ui/: index-visual.html  index.html
crates/learn-synth/: Cargo.toml
crates/learn-synth/src/: aimds.rs  lib.rs
docs/: seed-setup.md  voice-setup-manual.md
docs/adr/: ADR-001-elite-roadmap.md
docs/ddd/: DDD-001-bounded-contexts.md
scripts/: release.sh  smoke-test-seed-ask.sh
tests/tests/: orientation.rs
