[package]
name = "learn-coherence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "KB health and query-drift monitoring via ruvector-coherence spectral metrics."

[dependencies]
learn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

ruvector-coherence = { git = "https://github.com/ruvnet/RuVector.git", rev = "cf074121e580a2e2d91a3d0deb0275e989915a96", features = ["spectral"] }
