[package]
name = "learn-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Claim/entity/relation graph backed by ruvector-graph (redb) with Louvain + PageRank."

[dependencies]
learn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
camino = { version = "1", features = ["serde1"] }
sha2 = "0.10"
ruvector-graph = { git = "https://github.com/ruvnet/RuVector.git", default-features = false, features = ["storage"] }
petgraph = "0.6"

[dev-dependencies]
tempfile = "3"
proptest = "1"
