[package]
name = "learn-synth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Citation-grounded answer synthesis — Anthropic API or on-device ruvllm."

[dependencies]
learn-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
tokio.workspace = true
dirs = "5.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"

ruvllm = { git = "https://github.com/ruvnet/RuVector.git", rev = "cf074121e580a2e2d91a3d0deb0275e989915a96", default-features = false, features = ["minimal", "async-runtime"] }

[features]
# On-device synthesis via ruvllm's candle backend (issue #2). EXPERIMENTAL:
# CPU inference works; Metal acceleration has known upstream NaN/hang issues
# with Llama-3.1-8B quants. Off by default — default builds fail fast with
# guidance when LEARN_SYNTH_LOCAL=1 instead of erroring deep inside ruvllm.
local-synth = ["ruvllm/candle"]

[dev-dependencies]
serial_test = "3"
